--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,8 +1,5 @@
 {
-  "extends": [
-    "airbnb-base",
-    "plugin:prettier/recommended"
-  ],
+  "extends": ["airbnb-base", "plugin:prettier/recommended"],
   "env": {
     "node": true,
     "es2021": true
