--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,7 +16,9 @@ jobs:
           node-version: "18"
 
       - name: Install dependencies
+        working-directory: ./server
         run: npm install
 
       - name: Run ESLint
+        working-directory: ./server
         run: npm run lint
