--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "node-pg-migrate": "^8.0.3",
     "nodemon": "^3.1.10",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
