--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -19,6 +19,8 @@
         "tsx": "never"
       }
     ],
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "no-await-in-loop": "off",
+    "no-restricted-syntax": "off"
   }
 }
