--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "node --watch server.js",
-    "migrate": "node-pg-migrate -d",
+    "migrate": "node-pg-migrate up -d DATABASE_URL",
+    "migrate:revert": "node-pg-migrate down -d DATABASE_URL",
+    "migrate:create": "node-pg-migrate create -d DATABASE_URL",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
@@ -22,7 +24,7 @@
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.0.1",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "node-pg-migrate": "^8.0.3",
