refactor: migrate raw SQL to Prisma, update organizer/event API structure, and expand seed data

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -22,6 +22,10 @@
     "import/prefer-default-export": "off",
     "no-await-in-loop": "off",
     "no-restricted-syntax": "off",
-    "no-inner-declarations": "off"
+    "no-inner-declarations": "off",
+    "no-underscore-dangle": [
+      "error",
+      { "allow": ["_sum", "_count", "_avg", "_min", "_max"] }
+    ]
   }
 }
