--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "node --watch server.js",
-    "migrate": "node-pg-migrate up -d DATABASE_URL",
-    "migrate:revert": "node-pg-migrate down -d DATABASE_URL",
-    "migrate:create": "node-pg-migrate create -d DATABASE_URL",
+    "migrate:create": "prisma migrate dev --name",
+    "migrate:dev": "prisma migrate dev",
+    "migrate:deploy": "prisma migrate deploy",
+    "prisma:generate": "prisma generate",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
