--- a/server/package.json
+++ b/server/package.json
@@ -38,11 +38,13 @@
     "zod": "^4.0.10"
   },
   "devDependencies": {
+    "@jest/globals": "^30.0.5",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^5.5.1",
+    "jest": "^30.0.5",
     "prettier": "^3.6.2",
     "prisma": "^6.14.0"
   }
