--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.config.mjs",
     "start": "node src/server.js",
     "dev": "node --watch src/server.js",
     "migrate:create": "prisma migrate dev --name",
@@ -38,11 +38,13 @@
     "zod": "^4.0.10"
   },
   "devDependencies": {
+    "@jest/globals": "^30.0.5",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^5.5.1",
+    "jest": "^30.0.5",
     "prettier": "^3.6.2",
     "prisma": "^6.14.0"
   }
