--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,6 @@
 name: Run Test
 
-on: 
-    pull_request:
-        branches:
-            - '**'
-    push: 
-        branches:
-            - main 
+on: [push, pull_request]
 
 jobs:
   test:
