--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,6 +1,12 @@
 name: Prettier Format Check
 
-on: [push, pull_request]
+on: 
+    pull_request:
+        branches:
+            - '**'
+    push: 
+        branches:
+            - main 
 
 jobs:
   prettier:
