--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,7 +1,13 @@
 name: Lint Check
 
-on: [push, pull_request]
-
+on: 
+    pull_request:
+        branches:
+            - '**'
+    push: 
+        branches:
+            - main 
+            
 jobs:
   lint:
     runs-on: ubuntu-latest
