--- a/server/.gitignore
+++ b/server/.gitignore
@@ -18,7 +18,7 @@ Thumbs.db
 # Optional: database or dump files
 *.sqlite
 *.db
-*.sql
+# *.sql
 
 # Optional: coverage reports (if using tests)
 coverage/
