--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.config.mjs",
+    "postinstall": "npx prisma generate --schema=src/prisma/schema.prisma",
     "start": "node src/server.js",
     "dev": "node --watch src/server.js",
     "migrate:create": "prisma migrate dev --name",
