--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "qrcode": "^1.5.4",
+    "winston": "^3.18.3",
     "zod": "^4.0.10"
   },
   "devDependencies": {
