--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,8 @@
     "node-pg-migrate": "^8.0.3",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3",
     "qrcode": "^1.5.4",
     "resend": "^6.1.3",
